@@ -13,7 +13,7 @@ SUBDIRS := miosix
 ## List here your source files (both .s, .c and .cpp)
 ##
 SRC :=                                  \
-testsuite.cpp
+main.cpp
 
 ##
 ## List here additional static libraries with relative path
