@@ -1,0 +1,9 @@
+
+Welcome to the Miosix kernel
+============================
+
+You can find information on how to configure and use the kernel
+at the following url: http://www.webalice.it/fede.tft/miosix
+
+The testsuite has been moved in the miosix/testsuite directory.
+The examples have been moved in the miosix/examples directory. 
